[gd_scene load_steps=32 format=3 uid="uid://cjeyypwuli88j"]

[ext_resource type="Script" path="res://Script/Menu/menu.gd" id="1_3kacm"]
[ext_resource type="Theme" uid="uid://brh3ucsekdb0s" path="res://default.tres" id="1_a8m4p"]
[ext_resource type="Shader" path="res://Script/pause_menu.gdshader" id="2_fidap"]
[ext_resource type="Texture2D" uid="uid://783q0723b5hp" path="res://Asset/Video Menu/bg.png" id="2_k7p1f"]
[ext_resource type="Shader" path="res://Interface/estrelas.gdshader" id="3_0twq0"]
[ext_resource type="Texture2D" uid="uid://dbfhmh7pqj7og" path="res://Asset/Video Menu/stars.png" id="4_bkj27"]
[ext_resource type="Shader" path="res://Interface/planetas.gdshader" id="5_0hc1l"]
[ext_resource type="Texture2D" uid="uid://qc6cv52a2xg1" path="res://Asset/Video Menu/planets.png" id="6_1862x"]
[ext_resource type="Texture2D" uid="uid://8w5bqc0572te" path="res://Asset/Images/GalatimeLostEpisodes.png" id="7_bbhfc"]
[ext_resource type="PackedScene" uid="uid://qw8mhcsihprh" path="res://Interface/Settings/settings.tscn" id="9_2ghfu"]
[ext_resource type="PackedScene" uid="uid://u23oeknsgl8y" path="res://Interface/Credits/tela_creditos.tscn" id="10_e5ugt"]
[ext_resource type="FontFile" uid="uid://bgt0oqvnflx1s" path="res://Asset/Fonts/forgotten futurist rg.otf" id="11_fyl3r"]
[ext_resource type="AudioStream" uid="uid://er5tuxmt7cgf" path="res://Asset/Audio/Effects/Menu_Hover_Sound.mp3" id="12_jg8fk"]
[ext_resource type="AudioStream" uid="uid://dumxnki43scgh" path="res://Asset/Audio/Effects/Menu_Click_Sound.mp3" id="13_ao1gr"]
[ext_resource type="AudioStream" uid="uid://crx8a2g6l2nlj" path="res://Asset/Audio/Music/GalaTime Lost Episodes Theme.mp3" id="14_wgl1l"]
[ext_resource type="Script" path="res://Script/Menu/bg_music.gd" id="15_77b42"]
[ext_resource type="AudioStream" uid="uid://3we3f77ols7q" path="res://Asset/Audio/Effects/space-rumble-29970 (mp3cut.net).mp3" id="16_pm7l6"]
[ext_resource type="PackedScene" uid="uid://c1gpc2r6ydv40" path="res://Interface/warning_popup.tscn" id="18_onvaw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hp1sq"]
shader = ExtResource("3_0twq0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2h7cw"]
shader = ExtResource("5_0hc1l")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h43l8"]
shader = ExtResource("2_fidap")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yptow"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ufpx1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6yi7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_30obu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dw1co"]

[sub_resource type="Animation" id="Animation_bt1uo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7ouow"]
resource_name = "blur_off"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.143, 0.0]
}

[sub_resource type="Animation" id="Animation_jwjup"]
resource_name = "blur_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.143]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fsvk6"]
_data = {
"RESET": SubResource("Animation_bt1uo"),
"blur_off": SubResource("Animation_7ouow"),
"blur_on": SubResource("Animation_jwjup")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6y6fk"]

[node name="Menu" type="Control" node_paths=PackedStringArray("menu", "shield", "play_button", "continue_button", "settings_button", "credits_button", "leave_button", "settings", "margin_container", "tela_creditos", "blur_animation", "warning_popup", "blur", "menu_click", "menu_hover")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a8m4p")
script = ExtResource("1_3kacm")
menu = NodePath(".")
shield = NodePath("SHIELD protetor de todos os males")
play_button = NodePath("MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Play")
continue_button = NodePath("MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Continue")
settings_button = NodePath("MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Settings")
credits_button = NodePath("MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Credits")
leave_button = NodePath("MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Leave")
settings = NodePath("Settings")
margin_container = NodePath("MarginContainer")
tela_creditos = NodePath("TelaCreditos")
blur_animation = NodePath("blur")
warning_popup = NodePath("Warning Popup")
blur = NodePath("Blur")
menu_click = NodePath("s_menu_click")
menu_hover = NodePath("s_menu_hover")
metadata/_edit_use_anchors_ = true

[node name="BackGround" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="BG Animation" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Space" type="TextureRect" parent="BG Animation"]
layout_mode = 2
offset_left = -620.0
offset_top = -158.0
offset_right = 2380.0
offset_bottom = 1282.0
texture = ExtResource("2_k7p1f")

[node name="TextureRect3" type="TextureRect" parent="BG Animation"]
texture_repeat = 2
material = SubResource("ShaderMaterial_hp1sq")
layout_mode = 2
offset_left = -424.0
offset_top = -200.0
offset_right = 2576.0
offset_bottom = 1240.0
texture = ExtResource("4_bkj27")

[node name="TextureRect2" type="TextureRect" parent="BG Animation"]
texture_repeat = 2
material = SubResource("ShaderMaterial_2h7cw")
layout_mode = 2
offset_left = -6956.0
offset_top = -244.0
offset_right = 8044.0
offset_bottom = 1526.0
texture = ExtResource("6_1862x")

[node name="Blur" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_h43l8")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -348.0
offset_right = 860.0
offset_bottom = 349.0
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="MenuContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TituloImagem" type="TextureRect" parent="MarginContainer/MenuContainer"]
layout_mode = 2
texture = ExtResource("7_bbhfc")
expand_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MenuContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Continue" type="Button" parent="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_yptow")
text = "button_menu_continue"
flat = true

[node name="Play" type="Button" parent="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_ufpx1")
text = "button_menu_play"
flat = true

[node name="Settings" type="Button" parent="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_6yi7m")
text = "button_menu_settings"
flat = true

[node name="Credits" type="Button" parent="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_30obu")
text = "button_menu_credits"
flat = true

[node name="Leave" type="Button" parent="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer" groups=["button"]]
layout_mode = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_dw1co")
text = "button_menu_leave"
flat = true

[node name="Settings" parent="." instance=ExtResource("9_2ghfu")]
visible = false
layout_mode = 1

[node name="TelaCreditos" parent="." instance=ExtResource("10_e5ugt")]
visible = false
layout_mode = 1

[node name="Warning Popup" parent="." instance=ExtResource("18_onvaw")]
visible = false
layout_mode = 1

[node name="License" type="Label" parent="."]
modulate = Color(0.674815, 0.674815, 0.674815, 1)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -19.0
offset_right = 560.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_fyl3r")
theme_override_font_sizes/font_size = 15
text = "Â© 2025 / GT Team / This work is openly licensed via CC BY-NC 4.0"

[node name="Version" type="Label" parent="."]
modulate = Color(0.674815, 0.674815, 0.674815, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -560.0
offset_top = -19.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("11_fyl3r")
theme_override_font_sizes/font_size = 15
text = "V. 0.3.3"
horizontal_alignment = 2

[node name="s_menu_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_ao1gr")
bus = &"Sfx"

[node name="s_menu_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jg8fk")
volume_db = -12.0
bus = &"Sfx"

[node name="BG_music" type="AudioStreamPlayer" parent="." node_paths=PackedStringArray("timer")]
stream = ExtResource("14_wgl1l")
autoplay = true
bus = &"Music"
script = ExtResource("15_77b42")
timer = NodePath("../Timer")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BG_ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_pm7l6")
volume_db = -45.807
autoplay = true

[node name="blur" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fsvk6")
}
autoplay = "blur_on"

[node name="SHIELD protetor de todos os males" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_6y6fk")

[connection signal="pressed" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="mouse_entered" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_mouse_entered"]
[connection signal="pressed" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="pressed" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="mouse_entered" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_mouse_entered"]
[connection signal="pressed" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_mouse_entered"]
[connection signal="pressed" from="MarginContainer/MenuContainer/HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
[connection signal="finished" from="BG_music" to="BG_music" method="_on_finished"]
